# cardgame

./: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  _21_points.cpp  _21_points.h  _21_points.ui  _21point_board.cpp  _21point_board.h  _21point_board.ui  cardgame.pro  cmake_install.cmake  const.h  gameserver.cpp  gameserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pics.qrc  selectnumplayer.cpp  selectnumplayer.h  selectnumplayer.ui  test  uno_game.cpp  uno_game.h  uno_game.ui  waitroom.cpp  waitroom.h  waitroom.ui  waitserver.cpp  waitserver.h
cardgame/game/: 21points.cpp  card.cpp  main.cpp
cardgame/player_web/: player.cpp
cardgame/test_web/: client.cpp  server_multi.cpp  server_single.cpp
cardgame/web/: winsock.cpp
include/: card.h  game.h  player.h  winsock.h
